# nihongo

./: .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-supplementary  README.md  build-dev.sh  build-supplementary.sh  build.sh
.github/workflows/: build-and-deploy.yml
dev-server/: docker-compose.yml
dev-server/backend/: .gitignore  Cargo.toml  Dockerfile
dev-server/backend/src/: handlers.rs  main.rs  readers.rs  utils.rs  watchers.rs
dev-server/backend/src/utils/: errors.rs  logging.rs  top_level_listener.rs
dev-server/frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
latex/: nihongo-gakushuu-kyouzai-grammar.tex  nihongo-gakushuu-kyouzai-supplementary.tex  nihongo-gakushuu-kyouzai.tex
latex/components/: .template.tex  01-kana.tex  02-basic-grammar.tex  03-essential-grammar.tex  04-special-expressions.tex  A-conjugations.tex  A-grammar-mega-summary.tex  B-phrases.tex  B-vocabulary-mega-summary.tex  B1-interjections-and-expressions.tex  B2-basic-nouns.tex  B2-nouns.tex  B3-adjectives.tex  B3-nouns.tex  B4-adjectives.tex  B4-verbs.tex  B5-adverbs.tex  B5-verbs.tex  B6-adverbs.tex  C-miscellaneous-phrases.tex  (+14 more)
typst/: G.typ  G1-kana.typ  G2-basic-grammar.typ  G3-essential-grammar.typ  G4-special-expressions.typ  GA-grammar-mega-summary.typ  GB-miscellaneous-phrases.typ  S.typ  SA-kana.typ  SB-basic-nouns.typ  V.typ  VA-interjections-and-expressions.typ  VB-nouns.typ  VC-adjectives.typ  VD-verbs.typ  VE-adverbs.typ  nihongo-gakushuu-kyouzai.typ  playground.typ  template.typ
(+13 files in other folders)
