[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
clap = { version = "4.5.45", features = ["derive"] }
futures-util = "0.3.31"
listenfd = "1.0.2"
lopdf = { version = "0.37.0", features = ["async"] }
notify = "8.2.0"
rayon = "1.11.0"
tempfile = "3.20.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
